Unified 4096x4096 Leap 16.0 wallpaper (#154)
* Graphics from @hellcp. Many thanks for all the work!
* Resolves Leap part of gh#openSUSE/branding#135
* Covers both dark and light variant
* Use single 4096x4096 file as mentioned in gh#openSUSE/branding#161
* Use the dark 800x600 also for the back.png
* Use default.png instead of default-light.png to maximize compatability.

--- a/wallpapers/openSUSE.png.desktop.in
+++ b/wallpapers/openSUSE.png.desktop.in
@@ -1,6 +1,6 @@
 [Wallpaper]
 Encoding=UTF-8
-File=openSUSE@VERSION_NO_DOT@-1600x1200.png
+File=openSUSE@VERSION_NO_DOT@.png
 Name=openSUSE @VERSION@
 ImageType=pixmap
 Hidden=true
