Stop using static/dynamic xml files (#162)
* Relates to gh#openSUSE/branding#161
* Drop resolution-specific .desktop files
  they're useless now when we have single default.png
  and default-dark.png
* Entry in /usr/share/gnome-background-properties is enough
* Generate a compat symlink 1920x1200.png used by SLES/cockpit,
  XFce, and KDE

--- a/gnome/wallpaper-branding-openSUSE.xml.in
+++ b/gnome/wallpaper-branding-openSUSE.xml.in
@@ -2,8 +2,12 @@
 <!DOCTYPE wallpapers SYSTEM "gnome-wp-list.dtd">
 <wallpapers>
 	<wallpaper deleted="false">
-		<filename>/usr/share/wallpapers/openSUSE-default-@GNOME_STATIC_DYNAMIC@.xml</filename>
+		<filename>/usr/share/wallpapers/openSUSEdefault/contents/images/default.png</filename>
+	    <filename-dark>/usr/share/wallpapers/openSUSEdefault/contents/images/default-dark.png</filename-dark>
 		<options>zoom</options>
 		<name>openSUSE Tumbleweed</name>
+		<shade_type>solid</shade_type>
+		<pcolor>#63bbb2ff</pcolor>
+		<scolor>#0c2a27ff</scolor>
 	</wallpaper>
 </wallpapers>
